# NexDB

./: .gitignore  README.md  docs.md
docker/: Dockerfile  docker-compose.yml  haproxy.cfg
nexdb-cloud/data/: cloud.nexdb  store.json
nexdb-core/: Cargo.toml  README.md  client.rs  collection.rs  db.rs  document.rs  error.rs  index.rs  lib.rs  main.rs  migrate.rs  query.rs  server.rs  wal.rs
nexdb-docs/: api.html  architecture.html  docs.md  getting-started.html  index.html
nexdb-docs/css/: style.css
nexdb-docs/js/: main.js
pterodactyl/: nexdb-egg.json
sdk/node/: README.md  index.js  package.json
sdk/python/: README.md  nexdb.py  pyproject.toml
test/: benchmark.js
